--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   },
   "devDependencies": {
     "jasmine": "^2.5.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Nikhil22/namespace-it"
+  },
 }
